@@ -8,13 +8,13 @@
 
    This file is part of the GNUstep Project
 
-   This library is free software; you can redistribute it and/or
+   This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
    as published by the Free Software Foundation; either version 2
    of the License, or (at your option) any later version.
 
    You should have received a copy of the GNU General Public
-   License along with this library; see the file COPYING.LIB.
+   License along with this program; see the file COPYING.LIB.
    If not, write to the Free Software Foundation,
    59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 
@@ -254,7 +254,8 @@ static BOOL snuggleStart(NSString *t)
 	}
       else
 	{
-	  [str appendString: @"Automatically generated documentation"];
+	  [str appendFormat: @"%@ autogsdoc generated documentation",
+	    [info objectForKey: @"base"]];
 	}
       [str appendString: @"</title>\n"];
     }
