@@ -10,22 +10,28 @@
 
    This file is part of the GNUstep Project
 
-   This library is free software; you can redistribute it and/or
+   This program is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License
    as published by the Free Software Foundation; either version 2
    of the License, or (at your option) any later version.
 
    You should have received a copy of the GNU General Public
-   License along with this library; see the file COPYING.LIB.
+   License along with this program; see the file COPYING.LIB.
    If not, write to the Free Software Foundation,
    59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
+
    <abstract>
     This is the AGSParser class ... and some autogsdoc examples.
    </abstract>
    <front>
-    The AGSParser class is designed to produce a property-list
-    which can be handled by AGSOutput ... one class is not much
-    use without the other.
+    <chapter>
+      <heading>AGSParser front page</heading>
+      <p>
+	The AGSParser class is designed to produce a property-list
+	which can be handled by AGSOutput ... one class is not much
+	use without the other.
+      </p>
+    </chapter>
    </front>
 
    */
